--- a/public/index.html
+++ b/public/index.html
@@ -12,30 +12,6 @@
 
 <body>
     <main>
-        <section>
-            <header>
-                <h1>Balance</h1>
-                <h3 id="balance"></h3>
-            </header>
-        </section>
-        <!-- Native -->
-        <section>
-            <header>
-                <h2>Native</h2>
-            </header>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Token</th>
-                        <th>Balance</th>
-                        <th>Value</th>
-                    </tr>
-                </thead>
-                <tbody id="native">
-                </tbody>
-            </table>
-        </section>
-        <hr>
         <!-- v3 -->
         <section>
             <header>
@@ -56,6 +32,31 @@
             </table>
         </section>
         <hr>
+        <!-- Native -->
+        <section>
+            <header>
+                <h2>Native</h2>
+            </header>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Token</th>
+                        <th>Balance</th>
+                        <th>Value</th>
+                    </tr>
+                </thead>
+                <tbody id="native">
+                </tbody>
+            </table>
+        </section>
+        <hr>
+        <!-- Balance -->
+        <section>
+            <header>
+                <h1>Balance</h1>
+                <h3 id="balance"></h3>
+            </header>
+        </section>
         <!-- V2 -->
         <section>
             <header>
