--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
                         <th>Token 0</th>
                         <th>Token 1</th>
                         <th>Value</th>
+                        <th>Fees</th>
                     </tr>
                 </thead>
                 <tbody id="v3">
