--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
                         <th>Token 1</th>
                         <th>Value</th>
                         <th>Fees</th>
+                        <th>Gross</th>
                     </tr>
                 </thead>
                 <tbody id="v3">
