--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
         </section>
         <hr>
         <!-- V2 -->
-        <section>
+        <!-- <section>
             <header>
                 <h2>V2 Pools</h2>
             </header>
@@ -93,7 +93,7 @@
                 </tbody>
             </table>
         </section>
-        <hr>
+        <hr> -->
         <!-- Delegated -->
         <section>
             <header>
@@ -130,11 +130,6 @@
                         <th>Value</th>
                     </tr>
                 </thead>
-                <tr>
-                    <td>OP</td>
-                    <td id="OP-bal"></td>
-                    <td id="OP-val"></td>
-                </tr>
             </table>
         </section>
     </main>
