display updated balance with erc20

--- a/public/index.html
+++ b/public/index.html
@@ -130,6 +130,9 @@
                         <th>Value</th>
                     </tr>
                 </thead>
+                <tbody id="erc20">
+
+                </tbody>
             </table>
         </section>
     </main>
