added liquidity and fees subtotals

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <header>
+    <header style="padding-top: 1rem;">
         <section id="tape-native" style="margin-bottom: .5rem;"></section>
         <section id="tape-alt"></section>
     </header>
@@ -48,11 +48,20 @@
         <hr>
         <!-- Balance -->
         <section>
-            <header>
-                <h1>Balance</h1>
+            <aside>
+                <h2>Total Balance</h2>
                 <h3 id="balance"></h3>
-            </header>
+            </aside>
+            <aside>
+                <h2>LP Position Balance</h2>
+                <h3 id="liquidity"></h3>
+            </aside>
+            <aside>
+                <h2>Unclaimed Fees</h2>
+                <h3 id="fees"></h3>
+            </aside>
         </section>
+        <hr>
         <!-- Native -->
         <section>
             <header>
