added table captions and removed headers

--- a/public/index.html
+++ b/public/index.html
@@ -24,28 +24,6 @@
         <section id="tape-alt"></section>
     </header>
     <main>
-        <!-- v3 -->
-        <section>
-            <header>
-                <h2>Liquidty</h2>
-            </header>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Pair</th>
-                        <th>Protcol</th>
-                        <th>Token 0</th>
-                        <th>Token 1</th>
-                        <th>Value</th>
-                        <th>Fees</th>
-                        <th>Gross</th>
-                    </tr>
-                </thead>
-                <tbody id="v3">
-                </tbody>
-            </table>
-        </section>
-        <hr>
         <!-- Balance -->
         <section>
             <aside>
@@ -62,12 +40,30 @@
             </aside>
         </section>
         <hr>
+        <!-- v3 LP Position -->
+        <section>
+            <table>
+                <caption>V3 Liquidity Positions</caption>
+                <thead>
+                    <tr>
+                        <th>Pair</th>
+                        <th>Protcol</th>
+                        <th>Token 0</th>
+                        <th>Token 1</th>
+                        <th>Value</th>
+                        <th>Fees</th>
+                        <th>Gross</th>
+                    </tr>
+                </thead>
+                <tbody id="v3">
+                </tbody>
+            </table>
+        </section>
+        <hr>
         <!-- Native -->
         <section>
-            <header>
-                <h2>Native</h2>
-            </header>
             <table>
+                <caption>Native Token Balances</caption>
                 <thead>
                     <tr>
                         <th>Token</th>
@@ -105,10 +101,8 @@
         <hr> -->
         <!-- Delegated -->
         <section>
-            <header>
-                <h2>Delegated</h2>
-            </header>
             <table>
+                <caption>Delagated Token Balances</caption>
                 <thead>
                     <tr>
                         <th>Token</th>
